--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
 
 <div class="main-container">
 <nav>
-    <a href="#about-me">
+    <a href="#about-me-section">
       <i class="fas fa-user"></i>
       About Me
     </a>
@@ -34,8 +34,40 @@
     </a>
   </nav>
 
+
+<div class="header-deco">
+  <img src="palette.png" alt="paintbrush" class="paintbrush-top">
 <h1 class="super-header">Petals, Paint, and Create!</h1>
+ <img src="flower-pot.png" alt="potted plant" class="plant-bottom">
 </div>
+
+
+<section id="about-me-section">
+<div class="about-me">
+<img src="portfolio.png" alt="About Me" class="about-me-img">
+<div class="about-me-text">
+<p>Hi, I'm Elizabeth. I'm an artist, plant lover, and community builder. My passion for plants begain during the pandemic and quickly grw into something more, painting pots, creating plant-inspired accessories, and hosting creative events that bring people together.</p>
+<p> Each piece I make and every event I host is rooted in culture, joy, and connection. Whether it's a pot inspired by tradition or a night filled with painting and laughter, I hope to offer spaces and art that help people feel seen and supported.</p>
+<p>Thank you for being part of this growing journey. 🌱</p>
+</div>
+</div>
+</section>
+
+
+
+
+<footer>
+<p>Icons made by:</p>
+<ul>
+<li><a href="https://www.flaticon.com/free-icons/flower" title="flower icons">Flower icons created by Freepik - Flaticon</a></li>
+<li><a href="https://www.flaticon.com/free-icons/painting-brush" title="painting brush icons">Painting brush icons created by Mihimihi - Flaticon</a></li>
+<li><a href="https://www.flaticon.com/free-icons/cloud-computing" title="cloud computing icons">Cloud computing icons created by Freepik - Flaticon</a></li>
+<li><a href="https://www.flaticon.com/free-icons/cloud" title="cloud icons">Cloud icons created by Smashicons - Flaticon</a></li>
+<li><a href="https://www.flaticon.com/free-icons/rainbow" title="rainbow icons">Rainbow icons created by juicy_fish - Flaticon</a></li>
+</ul>
+</footer>
+</div>
+
 
 </body>
 </html>
