--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
 
 
 
+ <section id="event">
+  <div class="events">
+    <div class="event-header">
+      <h1>Upcoming Events!</h1>
+    </div>
+    <ul class="event-list">
+      <li>Workshop-Beaded Plantita Event at Bonita Vida</li>
+      <ul>
+        <li>Date: Saturday, July 19, 2025</li>
+        <li>Time: 6pm-9pm</li>
+        <li>Location: 5119 Fredericksburg Rd, San Antonio TX, 78229</li>
+      </ul>
+      <li>Frida Fest ATX with Frida Friday</li>
+      <ul>
+        <li>Date: Sunday, July 27, 2025</li>
+        <li>Time: 5pm-6pm</li>
+        <li>Location: 2403 E 16th st, Austin TX, 78702</li>
+      </ul>
+    </ul>
+  </div>
+</section>
+
+
+
 
 <footer>
 <p>Icons made by:</p>
