--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 </section>
 
 
-
- <section id="event">
+<section id="event">
   <div class="events">
     <div class="event-header">
       <h1>Upcoming Events!</h1>
@@ -80,6 +79,7 @@
 
 
 
+
 <footer>
 <p>Icons made by:</p>
 <ul>
@@ -88,6 +88,7 @@
 <li><a href="https://www.flaticon.com/free-icons/cloud-computing" title="cloud computing icons">Cloud computing icons created by Freepik - Flaticon</a></li>
 <li><a href="https://www.flaticon.com/free-icons/cloud" title="cloud icons">Cloud icons created by Smashicons - Flaticon</a></li>
 <li><a href="https://www.flaticon.com/free-icons/rainbow" title="rainbow icons">Rainbow icons created by juicy_fish - Flaticon</a></li>
+<li><a href="https://www.flaticon.com/free-icons/heart" title="heart icons">Heart icons created by Freepik - Flaticon</a></li>
 </ul>
 </footer>
 </div>
